--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
